# aamaze

./: .gitignore  LICENSE  README.md  main.py  metadata.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: automated_testing_on_push.yml
aamaze/: __init__.py  base_maze.py
aamaze/generation/: __init__.py  eller.py  growing_tree.py  kruskals.py  prims.py  recursive_backtracker.py  recursive_divisior.py  wilsons.py
aamaze/graphics/: __init__.py  app.py  defaults.py  draw_maze.py
aamaze/solving/: __init__.py  a_star.py  dijkstra.py  flood_fill.py
src/: base_maze.py
src/generation/: __init__.py  eller.py  kruskals.py  prims.py  recursive_backtracker.py
src/graphics/: __init__.py  draw_maze.py
src/solving/: dijkstra.py  flood_fill.py
tests/: test_base_maze.py  test_generation.py  test_solving.py
