[tool.poetry]
name = "aamaze"
version = "0.3.1"
description = "A python package for generating, solving and displaying mazes."
authors = ["aaFurze <aafurze@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aaFurze/aamaze"
keywords = ["maze", "algorithm", "maze generation", "maze solution", "display", "draw"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
